# dsp_compiler

./: .gitignore  CMakeLists.txt  README.md  conv2d.cpp  conv2d.h  driver.cpp  gitdiff.txt
cascade-opt/: CMakeLists.txt  cascade-opt.cpp
demos/: generate_linalg.py  generate_transform.py  input.mlir  output.ll  output.mlir  schedule.mlir  transform.mlir  transform_gen.sh
examples/matmul/: compile.sh  matmul.mlir  tile.mlir  tile2.mlir  tile3.mlir  tile4.mlir  tile5.mlir  tile_tvm.mlir
examples/matmul_TN/: compile.sh  matmul_TN.mlir  tile_fuse.mlir
examples/matmul_add/: compile.sh  matmul_add.mlir  tile.mlir
examples/matmul_add_fuse/: compile.sh  tile_fuse.mlir
examples/matmul_add_relu/: compile.sh  matmul_add_relu.mlir  tile.mlir
examples/matmul_add_relu_fuse/: compile.sh  matmul_add_relu.mlir  tile_example.mlir  tile_fuse.mlir  tile_fuse_tvm.mlir
examples/matmul_single/: compile.sh  input.mlir  transform.mlir
include/: InitAllDialects.h  InitAllExtensions.h  InitAllPasses.h
include/Conversion/: CMakeLists.txt  Passes.h  Passes.td
include/Conversion/ConvertToMTDSP/: ConvertToMTDSPPass.h
include/Conversion/LinalgToMTDSP/: LinalgToMTDSPPass.h
include/Conversion/MTDSPToLLVM/: MTDSPToLLVMPass.h
include/Conversion/MemRefToMTDSP/: MemRefToMTDSPPass.h
include/Dialect/: CMakeLists.txt
include/Dialect/LayoutTrans/IR/: CMakeLists.txt  LayoutTransBase.td  LayoutTransDialect.h  LayoutTransOps.td
include/Dialect/MTDSP/IR/: CMakeLists.txt  MTDSPBase.td  MTDSPDialect.h  MTDSPOps.td
include/Dialect/MTDSP/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/Dialect/Schedule/IR/: CMakeLists.txt  ScheduleBase.td  ScheduleDialect.h  ScheduleOps.td
include/Dialect/Schedule/TransformOps/: CMakeLists.txt  ScheduleTransformOps.h  ScheduleTransformOps.td
include/Dialect/Schedule/Transforms/: CMakeLists.txt  CustomCanonicalizationPatterns.h  (+3 more)
lib/Conversion/: CMakeLists.txt
lib/Conversion/ConvertToMTDSP/: CMakeLists.txt  ConvertToMTDSPPass.cpp
lib/Conversion/LinalgToMTDSP/: CMakeLists.txt  LinalgToMTDSP.cpp
lib/Conversion/MTDSPToLLVM/: AllocToParametersPass.cpp  CMakeLists.txt  MTDSPToLLVM.cpp  MTDSPToLLVMPass.cpp  RemoveAddressSpacePass.cpp
lib/Conversion/MemRefToMTDSP/: CMakeLists.txt  MemRefToMTDSP.cpp
lib/Dialect/: CMakeLists.txt
mtir-opt/: CMakeLists.txt  mtir-opt.cpp
test/: compile.sh  debug_cascade_opt.sh  generate_linalg.py  generate_transform.py  run_compiler.sh  schedule.mlir
test2/: debug_cascade_opt.sh  generate_matmul_add_relu.py  input.mlir  kernel.ll  output.mlir  run_compiler.sh  tile_fuse.mlir
(+31 files in other folders)
